fixed some spacing issues

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,3 +8,34 @@ $color_scheme: '{{ site.color_scheme }}';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Merriweather:wght@400;700&display=swap');
 @import "custom";
 
+.inline-image-l {
+  margin: 2rem auto;
+  max-width: 900px;
+  text-align: center;
+}
+
+.inline-image-l img {
+  width: 100%;
+  height: auto;
+  border-radius: 4px;
+}
+
+.inline-image-l figcaption,
+.caption {
+  margin-top: 0.5rem;
+  font-size: 0.9rem;
+  color: #555;
+}
+
+.image-row {
+  display: flex;
+  gap: 1.5rem;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 2rem 0 0.5rem 0;
+}
+
+.image-row img {
+  max-width: 45%;
+  height: auto;
+}
